test/instance-checks-5.err.expect
test/instance-checks-5.ktn:1:1: error: cannot match scalar type t1 with t2
test/instance-checks-5.ktn:1:1: note: t1 (from example) is from here
test/instance-checks-5.ktn:1:1: note: t2 (from example) is from here
